Fix spacing in tags input

--- a/frontend/src/shared/framework/components/controls/inputs/tags-input/tag.scss
+++ b/frontend/src/shared/framework/components/controls/inputs/tags-input/tag.scss
@@ -36,7 +36,7 @@ tag
 
     // Apply margin between tags.
 
-    margin-top: 0.75rem;
+    margin-top: 1rem;
 
     &:not(:last-child)
     {
