--- a/frontend/src/shared/framework/components/controls/inputs/tags-input/tags-input.scss
+++ b/frontend/src/shared/framework/components/controls/inputs/tags-input/tags-input.scss
@@ -80,7 +80,7 @@ tags-input
         display: flex;
         align-items: flex-start;
         flex-wrap: wrap;
-        padding-left: 0.75rem;
+        padding-left: 1rem;
     }
 
     > text-input > .input-control > .input-control-inner
